Fix: a11y: Legibility: Old browser notice button

--- a/_sass/buorg.scss
+++ b/_sass/buorg.scss
@@ -33,7 +33,7 @@
 }
 
 #buorgig{ 
-    background-color: #edbc68;
+    background-color: crimson;
 }
 
 @media only screen and (max-width: 700px){
